--- a/text/12_Lagrange_Multipliers.tex
+++ b/text/12_Lagrange_Multipliers.tex
@@ -49,11 +49,37 @@ In the other case that $\lambda = \frac{1}{4}$, the first equation yields $x = -
 The equations we started with have four solutions, at which the circle and ellipse are tangent.  The four points are $(3,0)$, $(-1,0)$, $\left( -\frac{1}{3},\frac{\sqrt{5}}{3}\right)$, and $\left( -\frac{1}{3},-\frac{\sqrt{5}}{3} \right)$.  The four values of $f$ are, respectively, $9$, $1$, $\frac{2}{3}$, and $\frac{2}{3}$.
 }
 
-Using this method, the three equation are $f_x = \lambda g_x$, $f_y = \lambda g_y$, and $g = k$, with unknowns $x$, $y$, and $\lambda$.  There is no absolute method for solving this system of equations (unless they are all linear equations, then use elimination or Cramer's Rule to solve).  Often, the first two equations yield $x$ and $y$ in terms of $\lambda$, and substituting into $g(x,y) = k$ gives an equation for $\lambda$.
+Using this method, the three equation are $f_x = \lambda g_x$, $f_y = \lambda g_y$, and $g = k$, with unknowns $x$, $y$, and $\lambda$.  There is no absolute method for solving this system of equations (unless they are all linear equations, then use elimination or Cramer's Rule to solve).  Often, the first two equations yield $x$ and $y$ in terms of $\lambda$, and substituting into $g(x,y) = k$ gives an equation for $\lambda$. This next example illustrates this method when one is maximizing or minimizing a function $f(x,y,z)$ of three variables subject to a constraint $g(x,y,z) = k$. The method is the same except that the equation $\nabla f = \lambda \nabla g$ will yield three equations in the variables $x$, $y$, and $z$, with the fourth equation $g(x,y,z) = k$ creating a system of four equations in four unknowns.
+
+\example{ex_lagrange3}{}{Suppose that $20$ square feet of cardboard is to be used to create a rectangular box with an open top. What dimensions will result in a box with the maximum volume?}{If we let $x$, $y$, and $z$ be the dimensions of the box, then the volume is given by $V(x,y,z) = xyz$ which is the function to be maximized.  The constraint in this problem is the amount of cardboard, or surface area, and so
+$$g(x,y,z) = 2xz + 2yz + xy = 20.$$
+The method of Lagrange multipliers yields the equations
+\begin{align*}
+V_x = \lambda g_x & \Rightarrow yz = \lambda(2z+y) \\
+V_y = \lambda g_y & \Rightarrow xz = \lambda(2z + x) \\
+V_z = \lambda g_z & \Rightarrow xy = \lambda (2x+2y) \\
+g(x,y,z) = 20 & \Rightarrow 2xz + 2yz + xy = 20
+\end{align*}
+Multiplying each of the first three equations by $x$, $y$, and $z$, respectively, gives the system
+\begin{align}
+xyz & = \lambda(2xz+xy) \\
+xyz & = \lambda(2yz + xy) \\
+xyz & = \lambda (2xz+2yz) \\
+2xz + 2yz + xy & = 20
+\end{align}
+Note that the first three equations imply that $\lambda \neq 0$, else one would arrive at the conclusion $xyz=0$, which does not make sense in this situation.  Therefore we can divide by $\lambda$ and we get from equations $(1)$ and $(2)$ that
+$$2xz + xy = 2yz + xy \text{ or } xz = yz.$$
+Since $z \neq 0$, we get that $x=y$.  Further, equations $(2)$ and $(3)$ imply that
+$$2yz + xy = 2xz + 2yz \text{ or } xy = 2xz.$$
+Again, since $x \neq 0$, we get that $y = 2z$.  Lastly, substitute $x = y = 2z$ into equation $(4)$ and we get
+$$4z^2 + 4z^2 + 4z^2 = 20.$$
+This gives us $3z^2 = 5$ or $z = \sqrt{\frac{5}{3}}$.  Therefore the dimenions of the box with maximum volume must be
+$$x = y = 2\sqrt{\frac{5}{3}} \text{ feet, and } z = \sqrt{\frac{5}{3}} \text{ feet}.$$
+}
 
 At the minimum, the level curve $f(x,y) = c$ is tangent to the constraint curve $g(x,y) = k$.  If that constraint curve is given parametrically by $x(t)$ and $y(t)$, then minimizing $f\left(x(t),y(t)\right)$ uses the chain rule:
 $$\frac{df}{dt} = \frac{\partial f}{\partial x} \frac{dx}{dt} + \frac{\partial f}{\partial y} \frac{dy}{dt}$$
-or $\nabla f \cdot \left( \frac{dx}{dt}, \frac{dy}{dt} \right) = 0$.  This is the calculus proof that $\nabla f$ is perpendicular to the curve.  Thus $\nabla f$ is paralell to $\nabla g$.  This means $(f_x,f_y) = \lambda (g_x,g_y)$.\\
+or $\nabla f \cdot \left( \frac{dx}{dt}, \frac{dy}{dt} \right) = 0$.  This is the calculus proof that $\nabla f$ is perpendicular to the curve.  Thus $\nabla f$ is parallel to $\nabla g$.  This means $(f_x,f_y) = \lambda (g_x,g_y)$.\\
 
 \noindent\textbf{\large Maximum and Minimum with Two Constraints}\\
 
@@ -84,7 +110,7 @@ subject to $g(x,y,z) = k_1$ and $h(x,y,z) = k_2$. To minimize or maximize $f(x,y
 \index{Lagrange Multipliers}
 }
 
-\example{ex_lagrange3}{}{Minimize $f(x,y,z) = x^2 + y^2 + z^2$ when $g = x+y+z = 9$ and $h = x+2y+3z = 20$.}{In figure \ref{}, the normals to those planes are $\nabla g = (1,1,1)$ and $\nabla h = (1,2,3)$.  The gradient of $f$ is $\nabla f = (2x,2y,2z)$.  The equations become
+\example{ex_lagrange4}{}{Minimize $f(x,y,z) = x^2 + y^2 + z^2$ when $g = x+y+z = 9$ and $h = x+2y+3z = 20$.}{In figure \ref{}, the normals to those planes are $\nabla g = (1,1,1)$ and $\nabla h = (1,2,3)$.  The gradient of $f$ is $\nabla f = (2x,2y,2z)$.  The equations become
 $$2x = \lambda_1 + \lambda_2, \: 2y = \lambda_1 + 2\lambda_2, \: 2z = \lambda_1 + 3 \lambda_2.$$
 Substitute these $x$, $y$, $z$ into the constraint equations $x+y+z=9$ and $x+2y+3z=20$ to get
 \begin{align*}
